--- a/src/Notification/css/notification.module.css
+++ b/src/Notification/css/notification.module.css
@@ -6,7 +6,7 @@
 
 .reactNotificationRoot {
   position: fixed;
-  z-index: 9000;
+  z-index: 999;
   pointer-events: none;
   width: 100%;
   height: 100%;
