--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -112,7 +112,7 @@
   outline: none;
   box-sizing: border-box;
   transition: .3s;
-  z-index: 999;
+  z-index: 996;
   opacity: 1;
   padding: .5rem;
   padding-right: .3rem;
